examples/c/error-codes/undefined/UB-CEM1-bad-static.output
UB-CEM1-bad-static.c:8:15: error: member reference base type '_Atomic(struct s)' is not a structure or union
      return s.x;
             ~^~
1 error generated.
